--- a/website/views/about.html
+++ b/website/views/about.html
@@ -10,18 +10,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <nav class="navbar navbar-dark bg-dark">
         <a href="#" class="navbar-brand">Node JS - Static Website</a>
-        <div class="ml-auto">
-            <ul class="navbar-nav">
-                <li class="nav-list"><a href="/about" class="nav-link">About US</a> </li>
-                <li class="nav-list"><a href="/service" class="nav-link">Services</a> </li>
-                <li class="nav-list"><a href="/contact" class="nav-link">Contact</a> </li>
-            </ul>
-        </div>
     </nav>
     <div>
-        <h1>Index Page</h1>
+        <h1>About Page</h1>
     </div>
 </body>
 
